infrastructure/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgres-allow-backend-only
  namespace: db 
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: postgresql 
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: backend 
      podSelector:
        matchLabels:
          app.kubernetes.io/name: backend-chart 
    ports:
    - protocol: TCP
      port: 5432
